# mipt-cpp-advanced-seminars

./: README.md
01_oop/: Bodies.cpp
02_oop/: counten_0.cpp  counten_1.cpp  counten_2.cpp  overriding.cpp
03_oop/: 01_predicate.cpp  02_predicate.cpp  03_predicate.cpp
04_streams/: 01_streams.cpp  02_streams.cpp
05_template/: 02_exsample.cpp
06_control/: 01_exsample.cpp  04_exsamle.cpp  swapping.cpp
07_control/: 01_list.cpp  02_list.cpp  03_strings.cpp  04_exsample.cpp  05_exsample.cpp  ~$минар 7.docx
08_std/: 02_vector.cpp  04_exsample.cpp  05_exsample.cpp  06_exsample.cpp  07_deque.cpp  08_deque.cpp  deque.txt  deque_new.txt  points.txt  points_sorted.txt  vector2.txt  Семинар 8.docx
09_std/: 02_list.cpp
lab-task-01/: file.txt
lab-task-01/00-true-realization/: main_old.cpp
lab-task-01/02-ipatencova/: main-6.cpp
lab-task-01/04-kunets/: Graphic.py
lab-task-01/05-mischenko/: Discrete_1.txt  Segment_0_10.txt  Segment_test_max.txt
lab-task-01/08-zarubin/: fullcode.cpp
lab-task-02/00-true-realization/: main.cpp
lab1/: main.cpp
lab1/Иванов/: main.cpp
lab1/Игнатов/: 1.cpp
lab1/Ипатенкова/: graphic.py
lab1/Кунец/: lab_1.cpp
lab1/Мищенко/: Laba.cpp  SetState.txt
lab1/Шмаков/: main.cpp
lab1/Янхотов/: main.cpp
lab2/: Лабораторная работа II.docx
seminar-01/: CMakeLists.txt
seminar-02/: CMakeLists.txt
seminar-03/: CMakeLists.txt
seminar-04/: CMakeLists.txt
seminar-04/include/: task-01.h  task-02.h  task-03.h
seminar-04/src/: task-01.cpp  task-03.cpp
seminar-06/: Семинар 6.docx
seminar-07/: Семинар 7.docx
(+42 files in other folders)
